# Voxel-Engine

./: .editorconfig  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  README.md  index.html
.github/workflows/: cmake-windows.yml  deploy-doc-site.yml
common/: common.h
common/include/: logging.h  pch.h  platform.h
common/inline/: logging.inl
common/source/: logging.cpp
core/: engine.h  mkdocs.yml
core/docs/: index.md
core/docs/dev-side/: about.md  index.md  logging.md
core/docs/usr-side/: begin.md
core/include/: logging.h  memory.h  pch.h  platform.h  shaders.h  window.h
core/source/: logging.cpp  memory.cpp  shaders.cpp  window.cpp
dev-side/about/: index.html
dev-side/logging/: index.html
editor/: App.xaml  App.xaml.cs  EngineEvents.cs  EngineHost.cs  MainWindow.xaml  MainWindow.xaml.cs
engine/: engine.h  mkdocs.yml
engine/docs/dev-side/: about.md  logging.md
engine/include/: api.hpp  application.hpp  engine.hpp  entrypoint.h  events.hpp  external.h  globals.h  logging.hpp  renderer.hpp  voxel.hpp  window.h
engine/resources/shaders/: default.frag  default.vert
engine/source/: application.cpp  engine.cpp  events.cpp  globals.cpp  logging.cpp  rederer.cpp  voxel.cpp  window.cpp
examples/: sandbox.cpp
examples/source/: sandbox.cpp
search/: search_index.json
structures/: structures.h
structures/include/: arrays.h  arrays.inl  defines.h  exceptions.h  memory.h  memory.inl  nodes.h  nodes.inl
structures/inline/: arrays.inl  nodes.inl
structures/source/: arrays.cpp  exceptions.cpp  nodes.cpp
structures/tests/: test_array.cpp  test_memory.cpp
tests/structures/: test_nodes.cpp
usr-side/begin/: index.html
